; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/provisioning/custom_config/components/custom_provisioning/proto-c/extr_custom_config.pb-c.c_custom_config_request__pack_to_buffer.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/provisioning/custom_config/components/custom_provisioning/proto-c/extr_custom_config.pb-c.c_custom_config_request__pack_to_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@custom_config_request__descriptor = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @custom_config_request__pack_to_buffer(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp eq i32* %8, @custom_config_request__descriptor
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = bitcast %struct.TYPE_5__* %12 to i32*
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @protobuf_c_message_pack_to_buffer(i32* %13, i32* %14)
  ret i64 %15
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @protobuf_c_message_pack_to_buffer(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
